# hsi-data-generator

./: .gitignore  CMakeLists.txt  README.md  simulator.py  spectra.txt
qt_stylesheets/: class_spectra_view.qss  class_spectrum_row.qss  export_view.qss  image_layout_view.qss  image_layout_widget.qss  main_style.qss  spectrum_widget.qss
scrap/: simulator.py
src/: hsi_data_generator.cpp
src/gui/: class_spectra_view.cpp  class_spectra_view.h  class_spectra_widget.cpp  class_spectra_widget.h  class_spectrum_row.cpp  class_spectrum_row.h  color_box_widget.cpp  color_box_widget.h  export_view.cpp  export_view.h  image_degradation_view.cpp  image_degradation_view.h  image_degradation_widget.cpp  image_degradation_widget.h  image_layout_view.cpp  image_layout_view.h  image_layout_widget.cpp  image_layout_widget.h  layout_blend_view.cpp  layout_blend_view.h  main_window.cpp  main_window.h  spectrum_widget.cpp  spectrum_widget.h
src/hsi/: hsi_exporter.cpp  hsi_exporter.h  image_layout.cpp  image_layout.h  project_loader.cpp  project_loader.h  spectrum.cpp  spectrum.h
src/image/: image_layout.cpp  image_layout.h
src/spectrum/: spectrum.cpp  spectrum.h  spectrum_generator.cpp  spectrum_generator.h
src/util/: util.cpp  util.h
